--- a/src/main/resources/templates/admin/coursesold/show.html
+++ b/src/main/resources/templates/admin/coursesold/show.html
@@ -27,9 +27,9 @@
       <div id="layoutSidenav_content">
         <main>
           <div class="container-fluid px-4">
-            <h1 class="mt-4">Khóa học đã bán</h1>
+            <h1 class="mt-4">bài giảng đã bán</h1>
             <ol class="breadcrumb mb-4">
-              <li class="breadcrumb-item active">Danh sách khóa học đã bán</li>
+              <li class="breadcrumb-item active">Danh sách bài giảng đã bán</li>
             </ol>
             <ol class="breadcrumb mb-4">
               <li class="breadcrumb-item">
@@ -49,14 +49,14 @@
                   <div
                     class="d-flex justify-content-between align-items-center"
                   >
-                    <h3>Danh sách khóa học đã bán</h3>
+                    <h3>Danh sách bài giảng đã bán</h3>
                   </div>
                   <hr />
                   <table class="table table-bordered table-hover">
                     <thead>
                       <tr>
                         <th>#</th>
-                        <th>Tên khóa học</th>
+                        <th>Tên bài giảng</th>
                         <th>Giá</th>
                         <th>Giáo viên</th>
                         <th>email người mua</th>
