--- a/src/main/resources/templates/client/homepage/show.html
+++ b/src/main/resources/templates/client/homepage/show.html
@@ -118,7 +118,7 @@
           <div class="row justify-content-center">
             <div class="col-xl-7 col-lg-8">
               <div class="section-tittle text-center">
-                <h2>khóa học nổi bật</h2>
+                <h2>bài giảng nổi bật</h2>
               </div>
             </div>
           </div>
@@ -140,7 +140,7 @@
                     <a
                       th:href="@{'/course/detail/' + ${course.id}}"
                       th:text="${course.name}"
-                      >Tên Khóa học</a
+                      >Tên bài giảng</a
                     >
                   </h3>
                   <p th:text="${course.shortDescription}" class="short-text">
@@ -193,7 +193,7 @@
             <!-- section tittle -->
             <div class="section-tittle section-tittle2 mb-20">
               <div class="front-text">
-                <h2 class="">Kết quả bạn đạt được sau khóa học</h2>
+                <h2 class="">Kết quả bạn đạt được sau bài giảng</h2>
               </div>
             </div>
             <div class="single-features">
