--- a/src/main/resources/templates/client/layout/footer.html
+++ b/src/main/resources/templates/client/layout/footer.html
@@ -38,7 +38,7 @@
               <h4>Giải pháp của chúng tôi</h4>
               <ul>
                 <li><a href="#">Thi thử trực tuyến</a></li>
-                <li><a href="#">Khóa học luyện thi</a></li>
+                <li><a href="#">bài giảng luyện thi</a></li>
                 <li><a href="#">Chứng chỉ & chứng nhận</a></li>
               </ul>
             </div>
