--- a/src/main/resources/templates/client/layout/subtitle.html
+++ b/src/main/resources/templates/client/layout/subtitle.html
@@ -12,7 +12,7 @@
                   Học Trực Tuyến
                 </h1>
                 <p data-animation="fadeInLeft" data-delay="0.4s">
-                  Xây dựng kỹ năng với các khóa học, chứng chỉ và bằng cấp trực
+                  Xây dựng kỹ năng với các bài giảng, chứng chỉ và bằng cấp trực
                   tuyến từ các trường đại học và công ty đẳng cấp thế giới
                 </p>
                 <a
@@ -39,10 +39,10 @@
               <img src="/img/icon/icon1.svg" alt="" />
             </div>
             <div class="features-caption">
-              <h3>60+ khóa học</h3>
+              <h3>60+ bài giảng</h3>
               <p>
-                Khám phá hơn 60 khóa học thuộc nhiều lĩnh vực từ cơ bản đến nâng
-                cao.
+                Khám phá hơn 60 bài giảng thuộc nhiều lĩnh vực từ cơ bản đến
+                nâng cao.
               </p>
             </div>
           </div>
