--- a/src/main/resources/templates/client/thank/failure.html
+++ b/src/main/resources/templates/client/thank/failure.html
@@ -73,8 +73,8 @@
             <h1 class="big-title text-danger">❌ Thanh toán thất bại!</h1>
 
             <h1 class="medium-title">
-              Có lỗi xảy ra trong quá trình thanh toán khóa học
-              <strong th:text="${course.name}">[Tên khóa học]</strong>.
+              Có lỗi xảy ra trong quá trình thanh toán bài giảng
+              <strong th:text="${course.name}">[Tên bài giảng]</strong>.
             </h1>
 
             <h1 class="small-title">
