--- a/src/main/resources/templates/admin/course/create.html
+++ b/src/main/resources/templates/admin/course/create.html
@@ -27,18 +27,18 @@
       <div id="layoutSidenav_content">
         <main>
           <div class="container-fluid px-4">
-            <h1 class="mt-4">Quản lí khóa học</h1>
+            <h1 class="mt-4">Quản lí bài giảng</h1>
             <ol class="breadcrumb mb-4">
               <li class="breadcrumb-item active">
                 <a th:href="@{/admin/course}">Course</a>
               </li>
-              <li class="breadcrumb-item active">Tạo khóa học</li>
+              <li class="breadcrumb-item active">Tạo bài giảng</li>
             </ol>
 
             <div class="mt-5">
               <div class="row">
                 <div class="col-md-8 col-12 mx-auto">
-                  <h3>Tạo khóa học mới</h3>
+                  <h3>Tạo bài giảng mới</h3>
 
                   <form
                     th:action="@{/admin/course/create}"
@@ -49,7 +49,7 @@
                   >
                     <!-- Name -->
                     <div class="mb-3 col-12 col-md-6">
-                      <label class="form-label">Tên khóa học:</label>
+                      <label class="form-label">Tên bài giảng:</label>
                       <input
                         type="text"
                         th:field="*{name}"
@@ -120,7 +120,7 @@
                     <!-- Thumbnail -->
                     <div class="mb-3 col-12 col-md-6">
                       <label for="thumbnailFile" class="form-label"
-                        >Ảnh khóa học:</label
+                        >Ảnh bài giảng:</label
                       >
                       <input
                         class="form-control"
@@ -136,7 +136,7 @@
                       <img
                         loading="lazy"
                         style="max-height: 500px; display: none"
-                        alt="Xem trước ảnh khóa học"
+                        alt="Xem trước ảnh bài giảng"
                         id="thumbnailPreview"
                       />
                     </div>
@@ -144,7 +144,7 @@
                     <!-- Submit -->
                     <div class="col-12 mt-4">
                       <button type="submit" class="btn btn-primary">
-                        Tạo khóa học
+                        Tạo bài giảng
                       </button>
                     </div>
                   </form>
